fixed title on mobile

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -8,6 +8,7 @@
     display: flex;
 
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -16,4 +17,5 @@
     margin: 20px 0 10px 0;
     color: $white-color;
     text-transform: uppercase;
+    text-align: center;
 }
